# killyourdarlingsno1

./: .gitignore  Cargo.toml  README.md  flake.nix  index.html  wasm.sh
.cargo/: config.toml
src/: background.rs  collider.rs  killzone.rs  main.rs  obstacles.rs  physics.rs  player.rs  state.rs  ui.rs  winzone.rs
src/ui/: death.rs  hud.rs  mod.rs  title.rs  won.rs
