[package]
name = "killyourdarlingsno1"
version = "0.0.0"
edition = "2021"
description = "Our submission to the KILL YOUR DARLINGS game jam: https://itch.io/jam/killyourdarlingsno1"
repository = "https://github.com/G-Street/killyourdarlingsno1"
keywords = ["bevy", "gamedev"]

[dependencies]
bevy = "0.18.1"
# Fork of (abandoned) github.com/Corrosive-Games/bevy-parallax, which doesn't work with Bevy > 0.15
bevy_parallaxium = "0.3.0"
wasm-bindgen = "=0.2.106"

[[bin]]
name = "main"
path = "src/main.rs"
