[package]
name = "killyourdarlingsno1"
version = "0.0.0"
edition = "2021"
description = "Our submission to the KILL YOUR DARLINGS game jam: https://itch.io/jam/killyourdarlingsno1"
repository = "https://github.com/G-Street/killyourdarlingsno1"
keywords = ["bevy", "gamedev"]

[dependencies]
# Using avian2d v0.6 for compat with bevy v0.18
avian2d = "0.7.0"
bevy = "0.19.0"
bevy_parallax = { git = "https://github.com/G-Street/bevy-parallax.git", version = "0.0.1" }
chacha20 = "0.10.1"
getrandom = { version = "0.4", features = ["wasm_js"] }
rand = "0.10.1"
wasm-bindgen = "=0.2.108"

[[bin]]
name = "main"
path = "src/main.rs"
